--- a/tmuxinator/Timetable.yml
+++ b/tmuxinator/Timetable.yml
@@ -1,6 +1,6 @@
-# ~/.tmuxinator/Deadlines.yml
+# ~/.tmuxinator/Timetable.yml
 
-name: Deadlines
+name: Timetable
 root: ~/
 
 # Optional tmux socket
@@ -25,18 +25,15 @@ root: ~/
 # attach: false
 
 # Runs after everything. Use it to attach to tmux with custom options etc.
-# post: tmux -CC attach -t Deadlines
+# post: tmux -CC attach -t Timetable
 
 windows:
-    - Front-end:
-        - cd /www/sites/deadlines/wwwroot
-        - nvim
-    - Back-end:
-        - cd /www/sites/deadlinesapi
+    - nvim:
+        - cd /www/sites/timetable/wwwroot
         - nvim
     - Server:
         - ssh root@188.226.192.169
         - tmux a -t Deadlines
     - SCSS:
-        - cd /www/sites/deadlines/wwwroot/assets/css
+        - cd /www/sites/timetable/wwwroot/styles
         - sass --watch style.scss:style.css
