--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,8 @@ set-option -g default-shell /bin/zsh
     set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Use vim keybindings in copy mode
-    setw -g mode-keys vi
+    #setw -g mode-keys vi
+    setw -g mode-keys v
 
 # Setup 'v' to begin selection as in Vim
     bind-key -t vi-copy v begin-selection
@@ -167,4 +168,5 @@ set -g status-interval 5               # set update frequencey (default 15 secon
 # status bar
     set -g status-right-length 80
     set -g status-right "#[fg=cyan]#{=15:pane_title} : #[fg=blue]#S #I:#P #[fg=yellow]: %d %b %Y #[fg=green]: %l:%M %p : #(date -u | awk '{print $4}') :"
-
+# set -g base-index 1
+# set -g pane-base-index 1
