--- a/tmuxinator/valentijn.yml
+++ b/tmuxinator/valentijn.yml
@@ -1,7 +1,7 @@
 # ~/.tmuxinator/valentijn.yml
 
-name: valentijn
-root: ~/
+name: Valentijn
+root: /www/sites/valentijn/wwwroot
 
 # Optional tmux socket
 # socket_name: foo
@@ -11,6 +11,7 @@ root: ~/
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 # pre_window: rbenv shell 2.0.0-p247
+# pre_window: cd /www/sites/valentijn/wwwroot
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
@@ -29,5 +30,4 @@ root: ~/
 
 windows:
     - Front-end:
-        - cd /www/sites/valentijn/wwwroot
         - vim
