--- a/tmuxinator/DeadlinesA2.yml
+++ b/tmuxinator/DeadlinesA2.yml
@@ -1,7 +1,7 @@
-# ~/.tmuxinator/Deadlines.yml
+# ~/.tmuxinator/DeadlinesA2.yml
 
-name: Deadlines
-root: /www/sites/deadlines/wwwroot
+name: DeadlinesA2
+root: /www/sites/DeadlinesA2/src
 
 # Optional tmux socket
 # socket_name: foo
@@ -25,18 +25,18 @@ root: /www/sites/deadlines/wwwroot
 # attach: false
 
 # Runs after everything. Use it to attach to tmux with custom options etc.
-# post: tmux -CC attach -t Deadlines
+# post: tmux -CC attach -t DeadlinesA2
 
 windows:
     - Front-end:
-        - cd /www/sites/deadlines/wwwroot
+        - cd /www/sites/deadlinesa2/wwwroot
         - v
     - Back-end:
         - cd /www/sites/deadlinesapi
         - v
     - Server:
         - ssh root@188.226.192.169
-        - tmux a -t Deadlines
+          # - tmux a -t Deadlines
     - SCSS:
-        - cd /www/sites/deadlines/wwwroot/assets/css
-        - sass --watch style.scss:style.css
+        # - cd /www/sites/deadlines2/wwwroot/assets/css
+        # - sass --watch style.scss:style.css
