--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # use UTF8
-set -g utf8
-set-window-option -g utf8 on
+# set -g utf8
+# set-window-option -g utf8 on
 
 # set shell
 set-option -g default-shell /bin/zsh
@@ -28,7 +28,7 @@ set -g default-terminal "screen-256color"
 
 # set scrollback history to 30000 (30k)
 set -g history-limit 30000
-
+#
 # set ` (tic) as the default prefix key combination
 # and unbind C-b to free it up
 unbind C-b
@@ -44,71 +44,71 @@ set -sg escape-time 1
 set -g base-index 1
 set -g pane-base-index 1
 
-# reload ~/.tmux.conf using PREFIX r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# use PREFIX | to split window horizontally and PREFIX - to split vertically
-bind | split-window -h
-bind - split-window -v
-
-# Make the current window the first window
-bind T swap-window -t 1
-
-# map Vi movement keys as pane movement keys
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# and use C-h and C-l to cycle thru panes
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
+# # reload ~/.tmux.conf using PREFIX r
+# bind r source-file ~/.tmux.conf \; display "Reloaded!"
+#
+# # use PREFIX | to split window horizontally and PREFIX - to split vertically
+# bind | split-window -h
+# bind - split-window -v
+#
+# # Make the current window the first window
+# bind T swap-window -t 1
+#
+# # map Vi movement keys as pane movement keys
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
+#
+# # and use C-h and C-l to cycle thru panes
+# bind -r C-h select-window -t :-
+# bind -r C-l select-window -t :+
+#
 # resize panes using PREFIX H, J, K, L
 bind H resize-pane -L 5
 bind J resize-pane -D 5
 bind K resize-pane -U 5
 bind L resize-pane -R 5
-
-# C-i for even-vertical arrangement and C-o to zoom current pane
-bind-key C-i select-layout even-vertical
-bind-key C-v select-layout even-horizontal
-bind-key C-o resize-pane -y 1000
-
-# Sync panes
-bind C-s set-window-option synchronize-panes
+#
+# # C-i for even-vertical arrangement and C-o to zoom current pane
+# bind-key C-i select-layout even-vertical
+# bind-key C-v select-layout even-horizontal
+# bind-key C-o resize-pane -y 1000
+#
+# # Sync panes
+# bind C-s set-window-option synchronize-panes
 
 # explicitly disable mouse control
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+# setw -g mode-mouse off
+# set -g mouse-select-pane off
+# set -g mouse-resize-pane off
+# set -g mouse-select-window off
 
-# ---------------------
-# Copy & Paste
-# ---------------------
-# provide access to the clipboard for pbpaste, pbcopy
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
-#set-window-option -g automatic-rename on
-
-# use vim keybindings in copy mode
-#setw -g mode-keys vi
-
-# setup 'v' to begin selection as in Vim
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# update default binding of 'Enter' to also use copy-pipe
-#unbind -t vi-copy Enter
-#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-#bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
-#bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
-
-# Save entire tmux history to a file - file will be on machine where tmux is
-# running
-#bind-key * command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
-
+# # ---------------------
+# # Copy & Paste
+# # ---------------------
+# # provide access to the clipboard for pbpaste, pbcopy
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-window-option -g automatic-rename on
+#
+# # use vim keybindings in copy mode
+# setw -g mode-keys vi
+#
+# # setup 'v' to begin selection as in Vim
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#
+# # update default binding of 'Enter' to also use copy-pipe
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#
+# bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
+# bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
+#
+# # Save entire tmux history to a file - file will be on machine where tmux is
+# # running
+# bind-key * command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
+#
 # -----------------------
 # Multistart panes
 # ----------------------
@@ -120,7 +120,7 @@ bind-key D run-shell 'tmux-multistart dev'
 bind-key T run-shell 'tmux-multistart txhub'
 
 bind-key C command-prompt -p "machine(s)/group: " "run-shell 'tmux-multistart %1'"
-
+#
 # ----------------------
 # set some pretty colors
 # ----------------------
@@ -137,7 +137,7 @@ set-option -g message-fg brightred #orange
 # Status Bar
 # -----------------------
 set-option -g status on                # turn the status bar on
-    set -g status-utf8 on                  # set utf-8 for the status bar
+    # set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 5               # set update frequencey (default 15 seconds)
     set -g status-justify centre           # center window list for clarity
 # set-option -g status-position top    # position the status bar at top of screen
