--- a/tmux.conf
+++ b/tmux.conf
@@ -8,8 +8,12 @@ set-option -g default-shell /bin/zsh
 # Copy-paste integration
     set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+# make tmux display things in 256 colors
+set -g default-terminal "xterm-256color"
+# set-option -ga terminal-overrides ",tmux-256color-italic:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # Use vim keybindings in copy mode
-    #setw -g mode-keys vi
     setw -g mode-keys v
 
 # Setup 'v' to begin selection as in Vim
@@ -23,8 +27,6 @@ set-option -g default-shell /bin/zsh
 # Bind ']' to use pbpaste
     bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
-# make tmux display things in 256 colors
-set -g default-terminal "screen-256color"
 
 # set scrollback history to 30000 (30k)
 set -g history-limit 30000
