--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,8 @@ set-option -g default-shell /bin/zsh
     set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # make tmux display things in 256 colors
+# set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color-bce"
 set -g default-terminal "xterm-256color"
 # set-option -ga terminal-overrides ",tmux-256color-italic:Tc"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
