--- a/tmux.conf
+++ b/tmux.conf
@@ -3,10 +3,12 @@
 # set-window-option -g utf8 on
 
 # set shell
-set-option -g default-shell /bin/zsh
+set -g default-shell $SHELL
+
 
 # Copy-paste integration
-    set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # make tmux display things in 256 colors
 # set -g default-terminal "screen-256color"
@@ -16,18 +18,18 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Use vim keybindings in copy mode
-    setw -g mode-keys v
+setw -g mode-keys v
 
 # Setup 'v' to begin selection as in Vim
-    bind-key -t vi-copy v begin-selection
-    bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-    unbind -t vi-copy Enter
-    bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Bind ']' to use pbpaste
-    bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 
 # set scrollback history to 30000 (30k)
@@ -83,10 +85,7 @@ bind L resize-pane -R 5
 # bind C-s set-window-option synchronize-panes
 
 # explicitly disable mouse control
-# setw -g mode-mouse off
-# set -g mouse-select-pane off
-# set -g mouse-resize-pane off
-# set -g mouse-select-window off
+set -g mouse on
 
 # # ---------------------
 # # Copy & Paste
@@ -129,56 +128,65 @@ bind-key C command-prompt -p "machine(s)/group: " "run-shell 'tmux-multistart %1
 # set some pretty colors
 # ----------------------
 # set pane colors - hilight the active pane
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour33 #blue
+	set-option -g pane-border-fg colour235 #base02
+	set-option -g pane-active-border-fg colour33 #blue
 #set-option -g pane-active-border-fg colour240 #base01
 
 # colorize messages in the command line
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+	set-option -g message-bg black #base02
+	set-option -g message-fg brightred #orange
 
 # ----------------------
 # Status Bar
 # -----------------------
-set-option -g status on                # turn the status bar on
-    # set -g status-utf8 on                  # set utf-8 for the status bar
-set -g status-interval 5               # set update frequencey (default 15 seconds)
-    set -g status-justify centre           # center window list for clarity
-# set-option -g status-position top    # position the status bar at top of screen
+	set-option -g status on                # turn the status bar on
+# 	set -g status-utf8 on                  # set utf-8 for the status bar
+	set -g status-interval 5               # set update frequencey (default 15 seconds)
+	set -g status-justify centre           # center window list for clarity
+# 	set-option -g status-position top    # position the status bar at top of screen
 
 # visual notification of activity in other windows
-    setw -g monitor-activity on
-    set -g visual-activity on
+	setw -g monitor-activity on
+	set -g visual-activity on
 
 # set color for status bar
-    set-option -g status-bg colour235 #base02
-    set-option -g status-fg yellow #yellow
-    set-option -g status-attr dim
+	set-option -g status-bg colour235 #base02
+	set-option -g status-fg yellow #yellow
+	set-option -g status-attr dim
 
 # set window list colors - red for active and cyan for inactive
-    set-window-option -g window-status-fg brightblue #base0
-    set-window-option -g window-status-bg colour236
-    set-window-option -g window-status-attr dim
+	set-window-option -g window-status-fg brightblue #base0
+	set-window-option -g window-status-bg colour236
+	set-window-option -g window-status-attr dim
 
-    set-window-option -g window-status-current-fg brightred #orange
-    set-window-option -g window-status-current-bg colour236
-    set-window-option -g window-status-current-attr bright
+	set-window-option -g window-status-current-fg brightred #orange
+	set-window-option -g window-status-current-bg colour236
+	set-window-option -g window-status-current-attr bright
 
 # show host name and IP address on left side of status bar
-    set -g status-left-length 85
-    set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(dig +short myip.opendns.com @resolver1.opendns.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') #[fg=green]#(/System/Library/PrivateFrameworks/Apple80211.framework/Versions/Current/Resources/airport -I | awk -F': ' '/ SSID/{print $2}') "
+	set -g status-left-length 85
+	set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(dig +short myip.opendns.com @resolver1.opendns.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #(ifconfig en3 | grep 'inet ' | awk '{print \"en3 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') #[fg=green]#(/System/Library/PrivateFrameworks/Apple80211.framework/Versions/Current/Resources/airport -I | awk -F': ' '/ SSID/{print $2}') "
 
 # show session name, window & pane number, date and time on right side of
 # status bar
-    set -g status-right-length 80
-    set -g status-right "#[fg=cyan]#{=15:pane_title} : #[fg=blue]#S #I:#P #[fg=yellow]: %d %b %Y #[fg=green]: %l:%M %p : #(date -u | awk '{print $4}') :"
+	set -g status-right-length 80
+	set -g status-right "#[fg=cyan]#{=15:pane_title} : #[fg=blue]#S #I:#P #[fg=yellow]: %d %b %Y #[fg=green]: %l:%M %p : #(date -u | awk '{print $4}') :"
 # set -g base-index 1
 # set -g pane-base-index 1
 
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+	is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+			| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+			bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+			bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+			bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+			bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+			bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
