feat: improve git graph view

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -1,6 +1,6 @@
 git:
-    merging:
-      args: "--no-ff"
-    pull:
-      mode: 'ff-only' # one of 'merge' | 'rebase' | 'ff-only'
-
+  merging:
+    args: "--no-ff"
+  pull:
+    mode: "ff-only" # one of 'merge' | 'rebase' | 'ff-only'
+  branchLogCmd: "git log --graph --color=always --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(auto)%d%C(reset)' --all"
