--- a/alacritty/alacritty-mac.yml
+++ b/alacritty/alacritty-mac.yml
@@ -890,34 +890,34 @@ window:
 colors:
   # Default colors
   primary:
-    background: "0x24283b"
-    foreground: "0xc0caf5"
+    background: "0x24283b" # #24283b
+    foreground: "0xc0caf5" # #c0caf5
 
   # Normal colors
   normal:
-    black: "0x1D202F"
-    red: "0xf7768e"
-    green: "0x9ece6a"
-    yellow: "0xe0af68"
-    blue: "0x7aa2f7"
-    magenta: "0xbb9af7"
-    cyan: "0x7dcfff"
-    white: "0xa9b1d6"
+    black: "0x1D202F" # #1D202F
+    red: "0xf7768e" # #f7768e
+    green: "0x9ece6a" # #9ece6a
+    yellow: "0xe0af68" # #e0af68
+    blue: "0x7aa2f7" # #7aa2f7
+    magenta: "0xbb9af7" # #bb9af7
+    cyan: "0x7dcfff" # #7dcfff
+    white: "0xa9b1d6" # #a9b1d6
 
   # Bright colors
   bright:
-    black: "0x414868"
-    red: "0xf7768e"
-    green: "0x9ece6a"
-    yellow: "0xe0af68"
-    blue: "0x7aa2f7"
-    magenta: "0xbb9af7"
-    cyan: "0x7dcfff"
-    white: "0xc0caf5"
+    black: "0x414868" # #414868
+    red: "0xf7768e" # #f7768e
+    green: "0x9ece6a" # #9ece6a
+    yellow: "0xe0af68" # #e0af68
+    blue: "0x7aa2f7" # #7aa2f7
+    magenta: "0xbb9af7" # #bb9af7
+    cyan: "0x7dcfff" # #7dcfff
+    white: "0xc0caf5" # #c0caf5
 
   indexed_colors:
-    - { index: 16, color: "0xff9e64" }
-    - { index: 17, color: "0xdb4b4b" }
+    - { index: 16, color: "0xff9e64" } # #ff9e64
+    - { index: 17, color: "0xdb4b4b" } # #db4b4b
 
 font:
   normal:
